-----------------------------------------

+ add custom log function (cli_log with macro definition.)
+ add "filename" field to pdfDocument struct.
+ modif function printAnalysisReport(struct pdfDocument * pdf) prototype.
+ add errors count in analysis report.
+ add functions headers.
+ remove duplicated call to checkMagicNumber() function
+ rename function getNumber_a(...) => getNumber_s(...)
+ improve error handling.
+ FlateDecode filter : increase destination buffer size on MZ_BUFF_ERROR error.

Fri, 03 June 2016 :: 0.11.1 :: (ufausther)
------------------------------------------

+ FlateDecode filter : increase destination buffer size on MZ_BUFF_ERROR error.


Mon, 06 June 2016 :: 0.11.1 :: (ufausther)
------------------------------------------

+ translate/update README.md

Tue, 07 June 2016 :: 0.12.0 :: (ufausther)
------------------------------------------

+ Add header files (armaditopdf.h - pdfStructs.h - pdfParsing.h - pdfAnalysis.h - utils.h ) and corresponding sources files.
+ folders reorganisation.
+ define version string in header (#define a6o_pdf_ver)
+ Add change log file.

Tue, 07 June 2016 :: 0.12.1 :: (ufausther)
------------------------------------------

+ bug fix: getDelimitedStringContent() temporary buffer was not updated.


Wed, 08 June 2016 :: 0.12.1 :: (ufausther)
------------------------------------------

+ modif for linux compatibility.

Thu, 09 June 2016 :: 0.12.2 :: (ufausther)
------------------------------------------

+ fix some crashes detected with fuzzing

Tue, 14 June 2016 :: 0.12.3 :: (ufausther)
------------------------------------------

+ fix crash :: getStreamFilters :: malformed dictionary.
+ recursive scan fix :: scan was stopped on error.
+ checkXref :: skip white spaces at the end of the line.

Wed, 15 June 2016 :: 0.12.3 :: (ufausther)
------------------------------------------

+ fix craches :: extractObjectFromObjStream() :: invalid offset (/First) and number of object (/N) in dictionary