@@ -26,7 +26,7 @@ along with Armadito module PDF.  If not, see <http://www.gnu.org/licenses/>.
 
 #include "pdfStructs.h"
 
-#define a6o_pdf_ver "0.12.3"
+#define a6o_pdf_ver "0.12.4"
 
 
 // Tests Coefficients
